--- a/Site/usr/templates/B3-default3/css/theme.less
+++ b/Site/usr/templates/B3-default3/css/theme.less
@@ -18,7 +18,6 @@
 @small-image: 100px;
 
 
-
 //-------------------------------------------------------------------------------------*/
 
 // This template is based on Bootstrap 2
@@ -89,6 +88,8 @@
 .SobiPro {
     padding: 4px;
     font-size: 14px;
+    line-height: 1.42857;
+
     & when (@inverse = inverse) {
         font-size: 110%;
     }
@@ -1178,6 +1179,10 @@
     padding-top: 10px;
     padding-bottom: 10px;
 }
+.SobiPro .mapSearch .btn {
+    height: 34px;   //Buttons mit Icon sind ein Pixel zu hoch
+}
+
 
 // Aggregation Field
 // -----------------------------------------------
@@ -1469,9 +1474,6 @@
         width: 100%;
         height: 35px;
     }
-    .SobiPro .sp-search-controls .btn {
-        width: 100%;
-    }
     .SobiPro .btn[name="spsearchphrase"] {
         padding: 2px 10px;
         font-size: 12px;
@@ -1530,7 +1532,15 @@
     .SigsiuTree .buttons {
         text-align: center;
     }
-
+    .SobiPro .spClassViewImage img {
+        float:none!important;
+    }
+    .SobiPro .ctrl-locate-me.btn,
+    .SobiPro .sp-search-controls .btn {
+        width: 100%;
+    }
 }
-
+.test {
+    width: 60% + 10px;
+}
 
