--- a/Site/media/css/bootstrap/datepicker.css
+++ b/Site/media/css/bootstrap/datepicker.css
@@ -77,7 +77,8 @@
 
 .SobiPro .bootstrap-datetimepicker-widget > ul {
 	list-style-type: none;
-	margin: 0
+	margin: 0;
+	padding: 0
 }
 
 .SobiPro .bootstrap-datetimepicker-widget .timepicker-hour,
@@ -264,6 +265,7 @@
 	background: #eee
 }
 
+.SobiPro .input-group.date
 .SobiPro .input-append.date
 .SobiPro .add-on i,
 .SobiPro .input-prepend.date .add-on i {
