New default3 template for Bootstrap 3/compatibility with Bootstrap 3 styles

--- a/Site/media/css/sobipro.css
+++ b/Site/media/css/sobipro.css
@@ -1,1 +1,1 @@
-.SobiPro .input-splarge{width:400px}.SobiPro .hide{display:none}.SobiPro div#sobiProFooter,.SobiPro div#sobiProFooter a{color:#999;font-size:9px;padding-top:10px;text-decoration:none}iframe,svg{max-width:inherit}
+iframe,svg{max-width:inherit}.modal-backdrop{background-color:#933}.SobiPro .input-splarge{width:400px}.SobiPro .hide{display:none}.SobiPro div#sobiProFooter,.SobiPro div#sobiProFooter a{color:#999;font-size:9px;padding-top:10px;text-decoration:none}
