--- a/Site/media/less/sobipro.less
+++ b/Site/media/less/sobipro.less
@@ -16,6 +16,10 @@
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  */
 
+iframe, svg { max-width: inherit; }
+.modal-backdrop {
+  background-color: #993333;
+}
 .SobiPro .input-splarge { width: 400px; }
 .SobiPro .hide { display: none; }
 .SobiPro div#sobiProFooter,
@@ -25,4 +29,3 @@
   padding-top: 10px;
   text-decoration: none;
 }
-iframe, svg { max-width: inherit; }
