--- a/Site/usr/templates/B3-default3/css/default.less
+++ b/Site/usr/templates/B3-default3/css/default.less
@@ -36,3 +36,9 @@
     padding-right: 5px;
     color: #808080;
 }
+.tags::before {
+    font-family: FontAwesome;
+    content: "";
+    padding-right: 2px;
+}
+
