--- a/Site/usr/templates/default3/css/theme.less
+++ b/Site/usr/templates/default3/css/theme.less
@@ -13,7 +13,7 @@
 // This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 
-@corners: angular;
+@corners: rounded;
 @colour-set: sobipro;
 @small-image: 100px;
 
@@ -119,6 +119,7 @@
 }
 .SobiPro .help-block {
     color: @font-color;
+    font-size: 13px;
 }
 .SobiPro .well {
     box-shadow: none;
@@ -228,10 +229,13 @@
 .modal-backdrop,
 .modal-backdrop.fade.in {
     opacity: 0.2;
+    filter: alpha(opacity=20);
     & when (@inverse = inverse) {
         opacity: 0.6;
+        filter: alpha(opacity=60);
     }
 }
+
 .modal-backdrop {
     background-color: @base-color;
     & when (@inverse = inverse) {
@@ -249,7 +253,7 @@
 // -----------------------------------------------
 .SobiPro h1 {
     color: @active-color;
-    font-size: 28px;
+    font-size: 26px;
 }
 .SobiPro h2 input[type="checkbox"] {
     margin: 0 0 5px 0;
@@ -328,8 +332,11 @@
 }
 
 .SobiPro input,
+.SobiPro textarea {
+    width: calc(100% - 12px);
+}
 .SobiPro select {
-    width: inherit;
+    width: 100%;
 }
 
 //tag corners are angular by default; Bootstrap corners are rounded by default
@@ -424,7 +431,6 @@
     .SobiPro .input-append .add-on,
     .SobiPro .input-prepend .add-on {
         color: @text-color;
-        cursor: pointer;
     }
 }
 
@@ -536,10 +542,23 @@
 
 // Alert windows and error messages
 // ----------------------------------------
+// Alert messages outside SobiPro without given color class
+.alert {
+    background-color: @alert-color;
+    border: 1px solid darken(@alert-color, 10%);
+}
+.alert,
+.alert h4 {
+    color: @active-color;
+}
+.alert-message {
+    margin-bottom: 0px;
+}
+
 // define bootstrap alert to use it as mixin
 .SobiPro .alert {
     padding: 8px 35px 8px 14px;
-    margin-bottom: 20px;
+//    margin-bottom: 20px;
     text-shadow: none;
 }
 .SobiPro .spAlert {
@@ -559,6 +578,26 @@
 }
 .SobiPro .spMessage {
     margin-top: 10px;
+}
+.SobiPro .SobiProBootBox i.error {
+    color: #A94442;
+    font-size: 30px;
+}
+.SobiPro .SobiProBootBox i.success {
+    color: #449D44;
+    font-size: 30px;
+}
+.SobiPro .SobiProBootBox div.signal {
+    float: left;
+    padding-right: 10px;
+    margin-top: 10px;
+}
+.SobiPro .SobiProBootBox .modal-body {
+    padding: 20px;
+}
+.SobiPro .SobiProBootBox .modal-footer {
+    padding: 10px 15px 15px;
+    background-color: #fff;
 }
 .SobiPro .spMessage .alert-error,
 .SobiPro .spMessage .alert-danger {
@@ -585,8 +624,10 @@
 }
 
 // Looks as a normal text (removal of the message design)
+.SobiPro .alert-normal,
 .SobiPro.alert-error.review-box,
 .SobiPro.alert-success.review-box {
+    padding: 10px 0 10px 0;
     font-size: 15px;
     color: @font-color;
     background-color: @back-color;
@@ -638,6 +679,9 @@
     background-color: @active-color;
     text-shadow: none;
     color: @hover-color;
+    & when (@corners = rounded) {
+        border-radius: 4px;
+    }
 }
 .SobiPro .topmenu li {
     line-height: 40px;
@@ -780,12 +824,11 @@
 .SobiPro .spNoImage {
     width: 100px;
     height: 75px;
-    font-size: 500%;
+    font-size: 60px;
     & when (isnumber(@small-image)) {
         width: @small-image;
-        height: @small-image/4*3;
-        @fs: 400%, 500%, 700%, 1000%, 1200%;
-        font-size: extract(@fs, @small-image*2/100);
+        height: calc((@small-image / 4) * 3);
+        font-size: calc((@small-image * 6)/10);
     }
     text-align: center;
     padding: 4px;
@@ -901,8 +944,17 @@
 }
 .SobiPro .spEntryEdit .progress {
     min-width: 100px;
-    width: 50%;
 }
+.SobiPro .spUpload input {
+    height: 21px;
+}
+.SobiPro .spUpload .span1 {
+    margin-left: 10px;
+}
+.SobiPro .spUpload .alert {
+    margin-top: 5px;
+}
+
 .SobiPro .spEntryEdit .required-message {
     margin: 25px 0 10px 0;
     & when (@inverse = inverse) {
@@ -915,19 +967,11 @@
     font-size: 14px;
 }
 
-.SobiPro .spClassEditUrl input,
-.SobiPro .spClassEditText textarea,
-.SobiPro .spClassEditInbox input {
-    width: 97%;
-}
-.SobiPro .spFieldUrl select {
-    width: auto;
+.SobiPro .input-append input {
+    width: calc(100% - 42px);
 }
 .SobiPro .spEntryEdit .message-lightbulb {
-//    margin-left: 15px;
-}
-.SobiPro .spEntryEdit .message-lightbulb {
-    left: 0%;
+    left: 0;
     position: relative;
 }
 .SobiPro .spEntryEdit .message-lightbulb .popover.bottom {
@@ -953,29 +997,31 @@
 
 // URL and Email Fields
 // ----------------------------------------
+.SobiPro .spFieldEmailLabel,
 .SobiPro .spFieldUrlLabel {
     margin-bottom: 5px;
 }
-/*
-.SobiPro .spFieldUrl input {
-    width: -moz-calc(100% - 100px);
-    width: -webkit-calc(100% - 100px);
-    width: -o-calc(100% - 100px);
-    width: calc(100% - 100px));
+& when (@corners = rounded) {
+    .SobiPro .spFieldUrl .input-prepend input,
+    .SobiPro .spFieldUrl .input-prepend .uneditable-input {
+        border-radius: 0 4px 4px 0;
+    }
+    .SobiPro .spFieldUrl .input-prepend select {
+        border-radius: 4px 0 0 4px;
+    }
 }
-*/
+.SobiPro .spFieldUrl input {
+    width: -moz-calc(100% - 113px);
+    width: -webkit-calc(100% - 113px);
+    width: -o-calc(100% - 113px);
+    width: calc(100% - 113px);
+}
+.SobiPro .spFieldUrl select,
 .SobiPro .spFieldUrl .input-prepend {
     width: 100%;
 }
 .SobiPro .spFieldUrl .btn-group {
-    width: 17%;
-}
-.SobiPro .spClassEditUrl .spClassUrl {
-    width: 80%;
-}
-
-.SobiPro .spFieldEmail {
-    margin-top: 5px;
+    width: 100px;
 }
 
 // Image Field
@@ -991,6 +1037,9 @@
     margin: 0 5px 5px 0;
     min-width: 50px;
     min-height: 50px;
+    & when (@corners = rounded) {
+        border-radius: 4px;
+    }
 }
 .SobiPro .spImageField input[type='checkbox'] {
     margin: 1px 5px 5px 0;
@@ -998,20 +1047,7 @@
 .SobiPro .spImageField label {
     display: inline-block;
 }
-.SobiPro .spImageUpload input {
-    height: 21px;
-}
-.SobiPro .spImageUpload .span1 {
-    margin-left: 10px;
-}
-.SobiPro .spImageUpload .progress-message {
-    margin-top: 15px;
-    margin-left: 10px;
-    clear: left;
-}
-.SobiPro .spImageUpload .alert {
-    margin-top: 5px;
-}
+
 
 // Sigsiu Tree
 // ----------------------------------------
@@ -1068,13 +1104,27 @@
 .SobiPro .spEntryEdit .spFieldCheckbox input {
     margin-top: 5px
 }
-.SobiPro .spSearch .spFieldCheckbox input {
-    margin-top: 8px
-}
-
 .SobiPro .spFieldRadio input {
     margin-top: 10px
 }
+
+.SobiPro .spSelectRangeFrom span,
+.SobiPro .spSelectRangeTo span {
+    display: inline-block;
+    min-width: 34px;
+}
+.SobiPro .spSelectRangeFrom .input-append,
+.SobiPro .spSelectRangeTo .input-append {
+    float: left;
+    width: calc(100% / 2 - 5px);
+}
+.SobiPro .spSelectRangeFrom .input-append {
+    margin: 0 5px 5px 0;
+}
+.SobiPro .spSelectRangeTo .input-append {
+    margin: 0 0 5px 5px;
+}
+
 .SobiPro .control-label input[type="checkbox"] {
     margin: 0;
 }
@@ -1096,16 +1146,8 @@
 
 // Search
 // ----------------------------------------
-.SobiPro .SPSearchInputRangeFrom,
-.SobiPro .SPSearchInputRangeTo,
-.SobiPro .SPSearchSelectRangeFrom,
-.SobiPro .SPSearchSelectRangeTo {
-    //padding-bottom: 5px;
-}
-.SobiPro .SPSearchSelectRangeFrom span,
-.SobiPro .SPSearchSelectRangeTo span {
-    display: inline-block;
-    min-width: 34px;
+.SobiPro .spSearch .spFieldCheckbox input {
+    margin-top: 8px
 }
 .SPSearch .highlight {
     background-color: yellow;
@@ -1147,10 +1189,6 @@
     text-decoration: none;
     background-color: #fff;
 }
-.SobiPro .input-append.date.spDatePicker {
-    float: left;
-    margin: 0 10px 10px 0
-}
 
 // Payment popup
 // ----------------------------------------
@@ -1179,6 +1217,8 @@
     cursor: progress;
 }
 
+
+
 // Common fields styling via variable CSS classes
 // (don't work if you change the field CSS classes in the Fields Manager)
 // ----------------------------------------
@@ -1193,6 +1233,9 @@
     border: 1px solid rgba(0, 0, 0, 0.2);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     margin: 5px;
+    & when (@corners = rounded) {
+        border-radius: 4px;
+    }
 }
 .SobiPro .spEntryContainer .spClassViewImage img {
     width: @small-image;
@@ -1200,24 +1243,22 @@
 
 // SP-GeoMap Field
 // -----------------------------------------------
-.SobiPro div.spClassViewMap {
-    padding-top: 10px;
-    padding-bottom: 10px;
+& when (@corners = rounded) {
+    .SobiPro .ctrl-geomap {
+        border-radius: 4px;
+    }
 }
 .SobiPro .mapSearch {
     display: inline-block;
-}
-.SobiPro .input-append input.spClassMap {
-    height: 21px;
 }
 
 // Aggregation Field
 // -----------------------------------------------
 .SobiPro .bootstrap-tagsinput {
-    width: 96%;
     & when (@inverse = inverse) {
         background-color: @hover-color;
     }
+    width: calc(100% - 12px);
 }
 .SobiPro .bootstrap-tagsinput .tag {
     color: @text-color;
@@ -1230,22 +1271,7 @@
         background-color: @base-color;
     }
 }
-.SobiPro div.spClassViewAggregation {
-    padding-top: 15px;
-    font-size: 90%;
-}
-.SobiPro div.spClassViewAggregation strong {
-    font-weight: 400;
-}
 
-// Contact Form
-// -----------------------------------------------
-.SobiPro div.spClassViewContact {
-    margin: 10px 0 10px 0;
-}
-.SobiPro .contactform .contactmessage {
-    width: 100%;
-}
 
 // Review and Rating App
 // -----------------------------------------------
@@ -1259,55 +1285,6 @@
 }
 .SobiPro .review-first i {
     color: @base-color;
-}
-
-// Download Field
-// -----------------------------------------------
-.SobiPro .spFieldDNPermission,
-.SobiPro .spFieldDNLicense {
-    margin-top: 5px;
-    margin-bottom: 10px;
-}
-.SobiPro .spFieldDNLicense label {
-    padding-right: 5px;
-    color: #666666;
-    margin-top: 5px;
-    float: left;
-}
-.SobiPro .spFieldDNPermission > label {
-    color: #666666;
-    margin-top: 20px;
-}
-.SobiPro .spFieldDNPermission .spFieldCheckbox label {
-    margin-right: 10px;
-}
-.SobiPro .spEditDownloadPreview {
-    margin-top: 6px;
-}
-.SobiPro .spEditDownloadPreview p {
-    color: #666666;
-    font-size: 14px;
-}
-.SobiPro .spEditDownloadPreview div {
-    float: left;
-}
-.SobiPro .spEditDownloadPreview input[type='checkbox'] {
-    margin: 0px 5px 6px 0px;
-}
-.SobiPro .spEditDownloadPreview label,
-.SobiPro .spdFileUpload input {
-    height: 21px;
-}
-.SobiPro .spdFileUpload .span1 {
-    margin-left: 10px;
-}
-.SobiPro .spdFileUpload .progress-message {
-    margin-top: 10px;
-    margin-left: 20px;
-    clear: left;
-}
-.SobiPro .spdFileUpload .alert {
-    margin-top: 5px;
 }
 
 // Calendar Field
@@ -1330,9 +1307,12 @@
     background-color: @alert-color;
     color: @text-color;
 }
+
+
 .SobiPro .spClassCalendarRepeat select {
     width: 150px;
 }
+
 
 // Collection App
 // -----------------------------------------------
@@ -1383,7 +1363,7 @@
 .SobiPro .collection-entry-container.spClassViewImage img {
    float: none!important;
    margin-left: 0;
-   width: 95%;
+   width: calc(100% - 8px);
 }
 .SobiPro .collection-entry-container.spClassViewText {
     text-align: justify;
@@ -1471,32 +1451,20 @@
         padding-right: 0;
     }
 
-    // Edit entry form
-    .SobiPro .spImageUpload input {
-        width: 70px !important;
-        height: 31px;
-    }
-
-    .SobiPro .spFieldUrl select {
-        //margin-bottom: 3px;
-        //width: 80px !important;
-    }
-
-    .SobiPro .bootstrap-tagsinput input {
-        width: 70% !important;
-    }
-
     .SobiPro .spCaticon i {
         font-size: 2.8em;
     }
-
     .SobiPro .spCaticon {
         margin-top: 10px;
         padding-left: 0;
         text-align: left;
     }
+    .SobiPro .spUpload input,
     .SobiPro .input-append input.spClassMap {
         height: 31px;
+    }
+    .SobiPro .input-small {
+        width: calc(100% - 12px);
     }
 }
 
@@ -1509,13 +1477,11 @@
         float: none;
         margin-left: 0;
     }
-
     .SobiPro .spEditImagePreview {
         float: none;
     }
-    .SobiPro .spImageUpload input {
-        width: 100% !important;
-        height: 31px;
+    .SobiPro .spUpload button.btn.select {
+        width: calc(100% - 44px);
     }
     .SobiPro .btn[name="spsearchphrase"] {
         padding: 2px 10px;
@@ -1527,32 +1493,27 @@
     .SobiPro .controls {
         margin-left: 0;
     }
-    .SobiPro input[name="sp_search_for"],
-//    .SobiPro input[type="text"],
-    .SobiPro input[type="password"],
-    .SobiPro textarea,
-    .SobiPro select
-    {
-        width: 100%;
-    }
-    .SobiPro .bootstrap-tagsinput {
-        width: 95%;
-    }
-    .SobiPro .bootstrap-tagsinput input {
-        width: 90% !important;
-    }
     .SobiPro input[name="sp_search_for"] {
         margin-bottom: 10px;
+    }
+    .SobiPro button.btn.spsearchphrase {
+    //PhpStorm meldet hier fälschlicherweise einen Fehler
+        width: calc(100% / 3);
+    }
+    .SobiPro .input-append.date.spDatePicker {
+        margin: 0 10px 10px 0;
+        width: 100%;
     }
     .SobiPro .spCaticon i {
         font-size: 3em;
     }
-    .SobiPro .input-append.date.spDatePicker {
-        float: none;
-        width: 90%;
-    }
     .SobiPro .spEntryEdit .message-lightbulb {
         left: 49%;
+    }
+    .SobiPro .input-medium,
+    .SobiPro .sp-search-phrases .btn-group,
+    .SobiPro .spUpload .btn-group {
+        width: 100%;
     }
 }
 
@@ -1566,8 +1527,11 @@
     }
     .SobiPro div.spClassViewImage img,
     .SobiPro .spEntryContainer .spClassViewImage img {
-        width: 97%;
+        width: calc(100% - 8px);
         margin: 0 0 10px 0;
+    }
+    .SobiPro .spClassViewImage img {
+        float:none!important;
     }
     .SobiPro .spNoImage {
         display: none;
@@ -1575,24 +1539,9 @@
     .SigsiuTree .buttons {
         text-align: center;
     }
-    .SobiPro .spClassViewImage img {
-        float:none!important;
-    }
-
-    .SobiPro .ctrl-locate-me.btn {
-        padding-right: 0;
-        padding-left: 0;
-    }
-    .SobiPro input[type="text"] {
-        width: 97%;
-        max-width: 97%;
-    }
-
-    .SobiPro .ctrl-locate-me.btn,
-    .SobiPro .sp-search-controls .btn,
-    .SobiPro .input-small {
+    .SobiPro .input-medium,
+    .SobiPro .sp-search-controls .btn {
         width: 100%;
     }
 }
-
 
