(+) Template setting to show/hide categories

--- a/Site/usr/templates/default3/css/theme.less
+++ b/Site/usr/templates/default3/css/theme.less
@@ -1410,7 +1410,7 @@
     }
 
     .SobiPro .spCaticon i {
-        font-size: 2.8em;
+        //font-size: 2.8em;
     }
     .SobiPro .spCaticon {
         margin-top: 10px;
@@ -1463,7 +1463,7 @@
         width: 100%;
     }
     .SobiPro .spCaticon i {
-        font-size: 3em;
+        //font-size: 3em;
     }
     .SobiPro .spEntryEdit .message-lightbulb {
         left: 49%;
@@ -1478,7 +1478,7 @@
 // Landscape phones and down
 @media (max-width: 480px) {
     .SobiPro .spCaticon i {
-        font-size: 2.5em;
+        //font-size: 2.5em;
     }
     .SobiPro .modal .control-group {
         margin-bottom: 6px;
