--- a/Site/usr/templates/B3-default3/css/theme.less
+++ b/Site/usr/templates/B3-default3/css/theme.less
@@ -1427,7 +1427,7 @@
     }
 
     .SobiPro .spCaticon i {
-        font-size: 2.8em;
+        //font-size: 2.8em;
     }
     .SobiPro .control-label div.paybox {
         margin-bottom: 8px;
@@ -1457,7 +1457,7 @@
         margin-left: 0;
     }
     .SobiPro .spCaticon i {
-        font-size: 3em;
+        //font-size: 3em;
     }
     .SobiPro .spEntryEdit .message-lightbulb {
         left: 49%;
@@ -1472,7 +1472,7 @@
 // Landscape phones and down
 @media (max-width: 480px) {
     .SobiPro .spCaticon i {
-        font-size: 2.5em;
+        //font-size: 2.5em;
     }
     .SobiPro .modal .form-group,
     .SobiPro .modal .control-group {
