(+) B2 input size styles implemented in B3 template, small template improvements and bug fixes

--- a/Site/usr/templates/B3-default3/css/theme.less
+++ b/Site/usr/templates/B3-default3/css/theme.less
@@ -21,7 +21,7 @@
 
 //-------------------------------------------------------------------------------------*/
 
-// This template is based on Bootstrap 2
+// This template is based on Bootstrap 3
 // and defines the following new classes based on the used colour theme:
 // .btn-sigsiu = a new button colour
 // .text-sigsiu = a new text colour
@@ -193,11 +193,30 @@
     margin-right: 0;
 }
 
-// Implement B2 styles
+// Implement B2 styles, these are handy to use
 // -----------------------------------------
-.SobiPro .input-large {
-    width: 200px;
+.SobiPro .input-mini {
+    width: 60px;
 }
+.SobiPro .input-small {
+    width: 90px;
+}
+.SobiPro .input-medium {
+    width: 150px;
+}
+.SobiPro .input-large {
+    width: 210px;
+}
+.SobiPro .input-xlarge {
+    width: 270px;
+}
+.SobiPro .input-xxlarge {
+    width: 400px;
+}
+.SobiPro .input-xxxlarge {
+    width: 530px;
+}
+
 
 // Modal windows
 // -----------------------------------------
@@ -903,6 +922,10 @@
 }
 .SobiPro .spNoImageContainer.right {
     float: right;
+    display: inline;
+}
+.SobiPro .spNoImageContainer.left {
+    float: left;
     display: inline;
 }
 .SobiPro .spNoImage {
