--- a/Site/usr/templates/default3/css/theme.less
+++ b/Site/usr/templates/default3/css/theme.less
@@ -857,6 +857,10 @@
     float: right;
     display: inline;
 }
+.SobiPro .spNoImageContainer.left {
+    float: left;
+    display: inline;
+}
 .SobiPro .spNoImage {
     display: flex;
     display: -webkit-flex;
