--- a/Site/usr/templates/B3-default3/css/default.less
+++ b/Site/usr/templates/B3-default3/css/default.less
@@ -28,6 +28,18 @@
 .postcode { display: inline-block; .address; }
 .fulldescription { padding-top: 15px;}
 .phone { padding-top: 10px; }
+.phone::before {
+    font-family: FontAwesome;
+    content: " ";
+}
+.fax::before {
+    font-family: FontAwesome;
+    content: " ";  //works only with Font Awesome 4
+}
+.website::before {
+    font-family: FontAwesome;
+    content: " "
+}
 .days { margin-top: 10px; }
 .days li { list-style: none; }
 .days li::before {
